Menu squashing fix

--- a/client/src/components/HeaderFooter.css
+++ b/client/src/components/HeaderFooter.css
@@ -15,6 +15,7 @@ header{
 .logo {
     width: 25vw;
     border-right: 1px solid #50ABFF;
+    min-width: 20rem;
 }
 
 header h3,footer p{
